<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">C-me Kids</string>
    <string name="preference_file_key">com.cancercarecompany.cme.PREFERENCE_FILE_KEY</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="crash_toast_text">Crash log saved</string>
    <string name="save">Spara</string>
    <string name="next">Nästa</string>
    <string name="send">Skicka</string>
    <string name="delete">Ta bort</string>
    <string name="remove">Ta bort</string>
    <string name="yes">Ja</string>
    <string name="no">Nej</string>
    <string name="ok">Ok</string>
    <string name="logout">Logga ut</string>
    <string name="settings">Inställningar</string>
    <string name="question">Fråga</string>
    <string name="home_question">Fråga oss vad som helst!</string>
    <string name="home_journey">Utforska *s cancerresa!</string>
    <string name="home_events">Kommande events</string>
    <string name="home_tips">Praktiska tips</string>
    <string name="home_inspiration">Livsbejakande</string>
    <string name="home_school">C-me skola</string>
    <string name="home_all_questions">Alla frågor</string>
    <string name="info_school">Cme Skola</string>
    <string name="info_inspiration">Livsbejakande</string>
    <string name="info_tips">Praktiska tips</string>
    <string name="info_school_title1">Information: Cme Skola 1, titel</string>
    <string name="info_school_content1">Information: Cme Skola 1, text</string>
    <string name="info_school_title2">Information: Cme Skola 2, titel</string>
    <string name="info_school_content2">Information: Cme Skola 2, text</string>
    <string name="info_inspiration_title1">Information: Livsbejakande 1, titel</string>
    <string name="info_inspiration_content1">Information: Livsbejakande 1, text</string>
    <string name="info_inspiration_title2">Information: Livsbejakande 2, titel</string>
    <string name="info_inspiration_content2">Information: Livsbejakande 1, text</string>
    <string name="info_tips_title1">Information: Tips 1, titel</string>
    <string name="info_tips_content1">Information: Tips 1, text</string>
    <string name="info_tips_title2">Information: Tips 2, titel</string>
    <string name="info_tips_content2">Information: Livsbejakande 2, text</string>
    <string name="remove_question">Är du säker på att du vill ta bort?</string>
    <string name="created_question">Du har skapat en ny fråga.</string>
    <string name="patient_careteam">s vårdteam</string>
    <string name="patient_journal">s dagbok</string>
    <string name="patient_events">s events</string>
    <string name="patient_journey">s cancerresa</string>
    <string name="journal_health_data">Hälsodata</string>
    <string name="journal_health_data_body_weight">Kroppsvikt</string>
    <string name="journal_health_data_body_weight_question">Ange *s kroppsvikt i kg</string>
    <string name="journal_health_data_body_temperature">Kroppstemperatur</string>
    <string name="journal_health_data_body_temperature_question">Ange *s kroppstemperatur i grader C</string>
    <string name="journal_health_data_blood_pressure">Blodtryck</string>
    <string name="journal_health_data_blood_pressure_question">Ange *s blodtryck i mm Hg </string>
    <string name="journal_health_data_heart_rate">Puls</string>
    <string name="journal_health_data_heart_rate_question">Ange *s puls i hjärtslag/minut</string>
    <string name="journal_status_header">Status</string>
    <string name="journal_patient_name">s cancerresa</string>
    <string name="journal_sideeffect_emotional">Känslomässiga biverkningar</string>
    <string name="journal_sideeffect_emotional_activities">Intresse för vardagliga aktiviteter</string>
    <string name="journal_sideeffect_emotional_activities_question">Känner * av någon förlust?</string>
    <string name="journal_sideeffect_emotional_activities_seekbar_headline"></string>
    <string name="journal_sideeffect_emotional_activities_seekbar_min">Ingen alls</string>
    <string name="journal_sideeffect_emotional_activities_seekbar_max">Jätteycket</string>
    <string name="journal_sideeffect_emotional_dejection">Nedstämdhet</string>
    <string name="journal_sideeffect_emotional_dejection_question">Hur nedstämd känner * sig?</string>
    <string name="journal_sideeffect_emotional_dejection_seekbar_headline"></string>
    <string name="journal_sideeffect_emotional_dejection_seekbar_min">Ingen nedstämdhet alls</string>
    <string name="journal_sideeffect_emotional_dejection_seekbar_max">Nedstämd</string>
    <string name="journal_sideeffect_emotional_depression">Depression</string>
    <string name="journal_sideeffect_emotional_depression_question">Hur deprimerad är *?</string>
    <string name="journal_sideeffect_emotional_depression_seekbar_headline"></string>
    <string name="journal_sideeffect_emotional_depression_seekbar_min">Ingen depression</string>
    <string name="journal_sideeffect_emotional_depression_seekbar_max">Jättemycket depression</string>
    <string name="journal_sideeffect_emotional_fear">Rädsla</string>
    <string name="journal_sideeffect_emotional_fear_question">Känner * av någon rädsla?</string>
    <string name="journal_sideeffect_emotional_fear_seekbar_headline"></string>
    <string name="journal_sideeffect_emotional_fear_seekbar_min">Ingen rädsla</string>
    <string name="journal_sideeffect_emotional_fear_seekbar_max">Jättemycket rädsla</string>
    <string name="journal_sideeffect_emotional_nervous">Nervösitet</string>
    <string name="journal_sideeffect_emotional_nervous_question">Hur nervös känner * sig?</string>
    <string name="journal_sideeffect_emotional_nervous_seekbar_headline"></string>
    <string name="journal_sideeffect_emotional_nervous_seekbar_min">Inte alls nervös</string>
    <string name="journal_sideeffect_emotional_nervous_seekbar_max">Jättenervös</string>
    <string name="journal_sideeffect_emotional_worry">Oro</string>
    <string name="journal_sideeffect_emotional_worry_question">Känner * någon oro??</string>
    <string name="journal_sideeffect_emotional_worry_seekbar_headline"></string>
    <string name="journal_sideeffect_emotional_worry_seekbar_min">Inte alls orolig</string>
    <string name="journal_sideeffect_emotional_worry_seekbar_max">Jätteorolig</string>
    <string name="journal_sideeffect_distress">Distress</string>
    <string name="journal_sideeffect_distress_question">Känner * av distress?</string>
    <string name="journal_sideeffect_distress_seekbar_headline">Distress</string>
    <string name="journal_sideeffect_distress_seekbar_min">Ingen distress</string>
    <string name="journal_sideeffect_distress_seekbar_max">Extrem distress</string>
    <string name="journal_sideeffect_family">Familjrelaterade problem</string>
    <string name="journal_sideeffect_family_relation_child">Relation till barn</string>
    <string name="journal_sideeffect_family_relation_partner">Relation till partner</string>
    <string name="journal_sideeffect_family_children">Möjligheten att få barn</string>
    <string name="journal_sideeffect_family_health">Hälsoproblem inom familjen</string>
    <string name="journal_sideeffect_other">Annan biverkning</string>
    <string name="journal_sideeffect_physical">Fysiska biverkningar</string>
    <string name="journal_sideeffect_physical_abuse">Missbruk</string>
    <string name="journal_sideeffect_physical_appearance">Utseende</string>
    <string name="journal_sideeffect_physical_appearance_question">Beskriv hur *s utseende har påverkats.</string>
    <string name="journal_sideeffect_physical_appetite">Ätsvårigheter</string>
    <string name="journal_sideeffect_physical_appetite_question">Hur mycket åt * vid </string>
    <string name="journal_sideeffect_physical_appetite_seekbar_breakfast">Frukost</string>
    <string name="journal_sideeffect_physical_appetite_seekbar_lunch">Lunch</string>
    <string name="journal_sideeffect_physical_appetite_seekbar_dinner">Middag</string>
    <string name="journal_sideeffect_physical_appetite_seekbar_min">Inget alls</string>
    <string name="journal_sideeffect_physical_appetite_seekbar_max">Åt upp allt</string>
    <string name="journal_sideeffect_physical_bloated">Svullenhet</string>
    <string name="journal_sideeffect_physical_bloated_question">Känner * sig svullen?</string>
    <string name="journal_sideeffect_physical_bloated_seekbar_headline">Svullenhet</string>
    <string name="journal_sideeffect_physical_bloated_seekbar_min">Inte svullen</string>
    <string name="journal_sideeffect_physical_bloated_seekbar_max">Jättesvullen</string>
    <string name="journal_sideeffect_physical_breathing">Andning</string>
    <string name="journal_sideeffect_physical_breathing_question">Beskriv *s andningssvårigheter</string>
    <string name="journal_sideeffect_physical_breathing_seekbar_headline">Sömn</string>
    <string name="journal_sideeffect_physical_breathing_seekbar_min">Dåligt</string>
    <string name="journal_sideeffect_physical_breathing_seekbar_max">Jättebra</string>
    <string name="journal_sideeffect_physical_constipation">Förstoppning</string>
    <string name="journal_sideeffect_physical_constipation_question">När hade * senast normal avföring?</string>
    <string name="journal_sideeffect_physical_constipation_radioButton1">Igår</string>
    <string name="journal_sideeffect_physical_constipation_radioButton2">2 dagar sedan</string>
    <string name="journal_sideeffect_physical_constipation_radioButton3">3 dagar sedan</string>
    <string name="journal_sideeffect_physical_constipation_radioButton4">4 dagar sedan</string>
    <string name="journal_sideeffect_physical_constipation_radioButton5">Mer än 4 </string>
    <string name="journal_sideeffect_physical_dermal">Torr hud/klåda</string>
    <string name="journal_sideeffect_physical_dermal_question">Har * problem med torr hud eller klåda?</string>
    <string name="journal_sideeffect_physical_dermal_seekbar_dry_skin">Torr hud</string>
    <string name="journal_sideeffect_physical_dermal_seekbar_min">Ingen</string>
    <string name="journal_sideeffect_physical_dermal_seekbar_max">Jättemycket</string>
    <string name="journal_sideeffect_physical_dermal_seekbar_itch">Klåda</string>
    <string name="journal_sideeffect_physical_diarrhea">Diarré</string>
    <string name="journal_sideeffect_physical_diarrhea_header">Diarré</string>
    <string name="journal_sideeffect_physical_diarrhea_question">Hur ofta har * haft diarré under det senaste dygnet?</string>
    <string name="journal_sideeffect_physical_diarrhea_radioButton1">1</string>
    <string name="journal_sideeffect_physical_diarrhea_radioButton2">2</string>
    <string name="journal_sideeffect_physical_diarrhea_radioButton3">3</string>
    <string name="journal_sideeffect_physical_diarrhea_radioButton4">4</string>
    <string name="journal_sideeffect_physical_diarrhea_radioButton5">Mer än 4</string>
    <string name="journal_sideeffect_physical_digestion">Matsmältning</string>
    <string name="journal_sideeffect_physical_digestion_question">Beskriv hur *s matsmältnig har påverkats.</string>
    <string name="journal_sideeffect_physical_dizziness">Yrsel</string>
    <string name="journal_sideeffect_physical_dizziness_header">Yrsel</string>
    <string name="email">Email</string>
    <string name="password">Lösenord</string>
    <string name="name">Namn</string>
    <string name="relationship">Relation till patient</string>
    <string name="txt_biv_fat_head">Lider Barnet av Fatigue idag?</string>
    <string name="txt_rad_yes">Ja</string>
    <string name="txt_rad_no">Nej</string>
    <string name="txt_biv_fat_desc">Gradera Barnets fatigue</string>
    <string name="txt_biv_seek_min">Minimal</string>
    <string name="txt_biv_seek_max">Betydande</string>
    <string name="journey_question_hint">Skriv din fråga här !</string>
</resources>