<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/register_header"
        android:id="@+id/textView3"
        android:textSize="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/text_register_name"
        android:hint="@string/name"
        android:background="@android:drawable/edit_text"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/text_register_email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:background="@android:drawable/edit_text"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_below="@+id/text_register_name"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/text_register_password"
        android:hint="@string/password"
        android:background="@android:drawable/edit_text"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_below="@+id/text_register_email"
        android:layout_alignLeft="@+id/text_register_email"
        android:layout_alignStart="@+id/text_register_email" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/text_register_relationship"
        android:hint="@string/relationship"
        android:background="@android:drawable/edit_text"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_below="@+id/text_register_password"
        android:layout_alignLeft="@+id/text_register_password"
        android:layout_alignStart="@+id/text_register_password" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="REGISTER"
        android:id="@+id/button_register"
        android:layout_below="@+id/text_register_relationship"
        android:layout_alignRight="@+id/text_register_relationship"
        android:layout_alignEnd="@+id/text_register_relationship" />

</RelativeLayout>