<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal" android:layout_width="500dp"
    android:layout_height="fill_parent"
    android:id="@+id/biv_slider_0_10_popup"
    android:weightSum="1"
    android:background="#ffffff"
    android:nestedScrollingEnabled="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_biv_fat_head"
        android:id="@+id/txt_biv_slider_head"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_biv_slider_head"
        android:layout_alignParentEnd="false"
        android:clickable="true"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:id="@+id/radioYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_rad_yes"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_rad_no" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_biv_fat_desc"
        android:id="@+id/txt_biv_slider_subhead"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txt_biv_slider_head"
        android:layout_marginTop="65dp" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seek_fat"
        android:layout_below="@+id/txt_biv_slider_subhead"
        android:max="10"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_biv_seek_min"
        android:id="@+id/txt_seek_min"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/seek_fat"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/seek_fat" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/txt_seek_res"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/seek_fat"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_biv_seek_max"
        android:id="@+id/txt_seek_max"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_alignParentEnd="false"
        android:layout_alignRight="@+id/seek_fat"
        android:layout_alignTop="@+id/txt_seek_min" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seek_fat2"
        android:layout_below="@+id/txt_seek_max"
        android:max="10"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_biv_seek_min"
        android:id="@+id/txt_seek_min2"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/seek_fat2"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/seek_fat2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/txt_seek_res2"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/seek_fat2"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_biv_seek_max"
        android:id="@+id/txt_seek_max2"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_alignParentEnd="false"
        android:layout_alignRight="@+id/seek_fat2"
        android:layout_alignTop="@+id/txt_seek_min2" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seek_fat3"
        android:layout_below="@+id/txt_seek_max2"
        android:max="10"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Small"
        android:text="@string/txt_biv_seek_min"
        android:id="@+id/txt_seek_min3"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/seek_fat3"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/seek_fat3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/txt_seek_res3"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/seek_fat3"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txt_biv_seek_max"
        android:id="@+id/txt_seek_max3"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_alignParentEnd="false"
        android:layout_alignRight="@+id/seek_fat3"
        android:layout_alignTop="@+id/txt_seek_min3" />

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/btn_save_careteam"
        android:visibility="visible"
        android:layout_alignParentEnd="false"
        android:background="@drawable/mark"
        android:layout_alignParentLeft="false"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/txt_seek_max3"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/btn_cancel_popup"
        android:visibility="visible"
        android:background="@drawable/delete"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="5dp"
        android:layout_below="@+id/txt_seek_min3" />

</RelativeLayout>

