<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context="com.cancercarecompany.ccc.ccc.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/layout_home_journey"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/background_border">

                <RelativeLayout
                    android:id="@+id/header2"
                    android:background="@color/cme_dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true">

                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_journey"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:id="@+id/txt_header_journey"
                        android:layout_centerHorizontal="true" />

                </RelativeLayout>

                <ImageButton
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bus_small"
                    android:id="@+id/button_start_journey"
                    android:layout_below="@+id/header2"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_home_question"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/background_border">

                <RelativeLayout
                    android:id="@+id/header1"
                    android:background="@color/cme_dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true">

                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_question"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:id="@+id/txt_question"
                        android:layout_centerHorizontal="true" />

                </RelativeLayout>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:hint="@string/journey_question_hint"
                    android:id="@+id/edit_question"
                    android:layout_below="@+id/header1"
                    android:layout_alignParentStart="true"
                    android:background="@android:drawable/edit_text"
                    android:theme="@style/cme_custom_theme"
                    android:textAlignment="textStart"
                    android:layout_gravity="top"
                    android:gravity="top|left" />

                <Button
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send"
                    android:id="@+id/button_send_question"
                    android:layout_below="@+id/edit_question"
                    android:layout_alignParentRight="true" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_home_events"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/background_border">

                <RelativeLayout
                    android:id="@+id/header3"
                    android:background="@color/cme_dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true">

                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_events"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:id="@+id/txt_home_events"
                        android:layout_centerHorizontal="true" />

                </RelativeLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
